[fix]: add overflow scroll on mod card name

--- a/src/renderer/components/mod-card/ModCard.css
+++ b/src/renderer/components/mod-card/ModCard.css
@@ -27,7 +27,7 @@
 	max-width: 70%;
 	min-width: 70%;
 
-	overflow: ellipsis;
+	overflow: scroll;
 }
 
 .delete-button:hover {
